src/test/ui/parser/issue-51602.rs
fn main(){
    if i in 1..10 {
//~^ ERROR expected `{`, found keyword `in`
        break;
    }
}
